fix network picker page load jump

--- a/assets/css/_select_networks.styl
+++ b/assets/css/_select_networks.styl
@@ -10,5 +10,5 @@
   &:hover
     cursor: pointer
   img
-    width: 77px
-    height: auto
+    width: network-picker
+    height: network-picker
